# middleware/validator.js
@@ -3,9 +3,13 @@ const { body, validationResult } = require('express-validator')
 
 const sleepTimeValidationRules = () => {
   return [
-    body('duration').isNumeric().withMessage('Duration must be a number').notEmpty().withMessage('Duration is required'),
-    body('date').isString().notEmpty().withMessage('Date is required'),
-    body('quality').isString().notEmpty().withMessage('Quality is required'),
+    body('sleep_date').isString().notEmpty().withMessage('Sleep date is required'),
+    body('bedtime').isString().notEmpty().withMessage('Bed time is required'),
+    body('wakeup_time').isString().notEmpty().withMessage('Wake up time is required'),
+    body('total_sleep_hours').isNumeric().notEmpty().withMessage('Total sleep hour is required'),
+    body('sleep_quality').isString().notEmpty().withMessage('Sleep quality is required'),
+    body('dreams_recorded').isString().notEmpty().withMessage('Dreams recorded is required'),
+    body('notes').isString().notEmpty().withMessage('Notes is required'),
   ]
 }
 const exerciseValidationRules = () => {
